edit module vendor

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nwidart/panel",
+    "name": "zaman/panel",
     "description": "",
     "type": "laravel-module",
     "authors": [
